--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,3 +49,9 @@ app:
     allowed-origins: ${CORS_ALLOWED_ORIGINS}
   mail:
     from: ${MAIL_FROM}
+
+cloudinary:
+  cloud-name: ${CLOUDINARY_CLOUD_NAME}
+  api-key: ${CLOUDINARY_API_KEY}
+  api-secret: ${CLOUDINARY_API_SECRET}
+  folder: ${CLOUDINARY_FOLDER:per/uploads}
