--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ ACCESS_TOKEN_TTL=PT15M
 REFRESH_TOKEN_TTL=P30D
 JWT_ISSUER=auth-service
 
+# Cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
 # Mail
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
