--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     redis:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
-      password: ${REDIS_PASSWORD:}
+      password: ${REDIS_PASSWORD}
   mail:
     host: ${MAIL_HOST}
     port: ${MAIL_PORT}
@@ -27,10 +27,10 @@ spring:
       mail.smtp.auth: ${MAIL_SMTP_AUTH}
       mail.smtp.starttls.enable: ${MAIL_SMTP_STARTTLS}
       mail.smtp.starttls.required: ${MAIL_SMTP_STARTTLS}
-      mail.smtp.ssl.trust: ${MAIL_SMTP_SSL_TRUST:smtp.gmail.com}
-      mail.smtp.connectiontimeout: ${MAIL_SMTP_CONNECTION_TIMEOUT:5000}
-      mail.smtp.timeout: ${MAIL_SMTP_TIMEOUT:5000}
-      mail.smtp.writetimeout: ${MAIL_SMTP_WRITETIMEOUT:5000}
+      mail.smtp.ssl.trust: ${MAIL_HOST}
+      mail.smtp.connectiontimeout: ${MAIL_SMTP_CONNECTION_TIMEOUT}
+      mail.smtp.timeout: ${MAIL_SMTP_TIMEOUT}
+      mail.smtp.writetimeout: ${MAIL_SMTP_WRITETIMEOUT}
     default-encoding: UTF-8
 
 server:
@@ -54,4 +54,4 @@ cloudinary:
   cloud-name: ${CLOUDINARY_CLOUD_NAME}
   api-key: ${CLOUDINARY_API_KEY}
   api-secret: ${CLOUDINARY_API_SECRET}
-  folder: ${CLOUDINARY_FOLDER:per/uploads}
+  folder: ${CLOUDINARY_FOLDER}
