--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,13 @@
 			<version>1.6.3</version>
 		</dependency>
 
+		<!-- OpenAPI/Swagger -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
