--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,8 @@ MAIL_SMTP_STARTTLS=true
 SERVER_PORT=8080
 CORS_ALLOWED_ORIGINS=http://localhost:3000
 APP_BASE_URL=http://localhost:8080
+
+# PayOS
+PAY_OS_CLIENT_ID=
+PAY_OS_API_KEY=
+PAY_OS_CHECKSUM_KEY=
