--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,3 +63,7 @@ payos:
   webhook-path: /api/v1/payments/payos/webhook
   return-path: /payments/payos/return
   cancel-path: /payments/payos/return
+
+payment:
+  expiration-check-interval: PT1M
+  expiration-check-batch-size: 50
