chore(docker): update docker image to version 0.0.2

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,5 +1,6 @@
-# docker-compose-prod.yml
-# RUN: docker compose -f docker-compose-prod.yml up -d
+# RUN:    docker compose -f docker-compose-prod.yml up -d
+# BUILD:  docker build -t nguyenminh1301/per:<tagname>
+# PUSH:   docker push nguyenminh1301/per:<tagname>
 
 services:
   app:
