chore(swagger): add title to Swagger

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,5 +76,6 @@ payment:
 springdoc:
   swagger-ui:
     path: /per/swagger-ui.html
+    title: Per - Api docs
   api-docs:
     path: /per/v3/api-docs
