--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -76,5 +76,8 @@ payment:
 springdoc:
   swagger-ui:
     path: /per/api-docs
+    config-url: /per/v3/api-docs/swagger-config
+    url: /per/v3/api-docs
   api-docs:
-    path: /per/v1/api-docs
+    path: /per/v3/api-docs
+  server-url: ${APP_BASE_URL:http://localhost:8080}
