--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ MAIL_SMTP_STARTTLS=true
 
 # Server & App
 SERVER_PORT=8080
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 APP_BASE_URL=http://localhost:8080
 
 # PayOS
