--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,7 @@ security:
 app:
   base-url: ${APP_BASE_URL:http://localhost:8080}
   cors:
-    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+    allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173,https://nguyenminh.space,https://www.nguyenminh.space}
   mail:
     from: ${MAIL_FROM}
 
