config(docker): externalize Docker container name and image tag in production compose file with new environment variables

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,8 @@ APP_BASE_URL=http://localhost:8080
 PAY_OS_CLIENT_ID=
 PAY_OS_API_KEY=
 PAY_OS_CHECKSUM_KEY=
+
+# Docker
+DOCKER_USERNAME=
+DOCKER_APP=
+DOCKER_APP_VERSION=
