--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -2,36 +2,31 @@
 
 services:
   app:
-    container_name: per
-    image: nguyenminh1301/per:1.1.0
+    container_name: ${DOCKER_APP}
+    image: ${DOCKER_USERNAME}/${DOCKER_APP}:${DOCKER_APP_VERSION}
     restart: unless-stopped
 
     environment:
       - SPRING_PROFILES_ACTIVE=prod
       - SERVER_PORT=${SERVER_PORT}
 
-      # --- PostgreSQL (app đọc từ env) ---
       - POSTGRES_URL=${POSTGRES_URL}
       - POSTGRES_USERNAME=${POSTGRES_USERNAME}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
-      # --- Redis ---
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
 
-      # --- JWT ---
       - JWT_SECRET=${JWT_SECRET}
       - ACCESS_TOKEN_TTL=${ACCESS_TOKEN_TTL}
       - REFRESH_TOKEN_TTL=${REFRESH_TOKEN_TTL}
       - JWT_ISSUER=${JWT_ISSUER}
 
-      # --- Cloudinary ---
       - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
       - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
       - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
       - CLOUDINARY_FOLDER=${CLOUDINARY_FOLDER}
 
-      # --- Mail ---
       - MAIL_USERNAME=${MAIL_USERNAME}
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - MAIL_FROM=${MAIL_FROM}
@@ -41,11 +36,9 @@ services:
       - MAIL_SMTP_AUTH=${MAIL_SMTP_AUTH}
       - MAIL_SMTP_STARTTLS=${MAIL_SMTP_STARTTLS}
 
-      # --- CORS & App URLs ---
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
       - APP_BASE_URL=${APP_BASE_URL}
 
-      # --- PayOS ---
       - PAY_OS_CLIENT_ID=${PAY_OS_CLIENT_ID}
       - PAY_OS_API_KEY=${PAY_OS_API_KEY}
       - PAY_OS_CHECKSUM_KEY=${PAY_OS_CHECKSUM_KEY}
