--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,7 +90,81 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/${{ env.DOCKER_APP }}:${{ steps.extract_version.outputs.VERSION }}
           cache-from: type=gha
           cache-to: type=gha,mode=mas
-          build-args:
+          build-args: |
+            PROFILE=dev
+            APP_VERSION=${{ steps.extract_version.outputs.VERSION }}
+
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USERNAME }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          port: ${{ secrets.VPS_PORT }}
+          passphrase: ${{ secrets.VPS_SSH_KEY_PASSPHRASE }}
+          script: |
+            # Navigate to app dir
+            cd /home/${{ env.DOCKER_APP }} || mkdir -p /home/${{ env.DOCKER_APP }} && cd /home/${{ env.DOCKER_APP }}
+            
+            # Create .env file from secrets
+            cat > .env << EOF
+            SPRING_PROFILES_ACTIVE=prod
+            SERVER_PORT=${SERVER_PORT}
+      
+            POSTGRES_URL=${POSTGRES_URL}
+            POSTGRES_USERNAME=${POSTGRES_USERNAME}
+            POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      
+            REDIS_HOST=${REDIS_HOST}
+            REDIS_PORT=${REDIS_PORT}
+      
+            JWT_SECRET=${JWT_SECRET}
+            ACCESS_TOKEN_TTL=${ACCESS_TOKEN_TTL}
+            REFRESH_TOKEN_TTL=${REFRESH_TOKEN_TTL}
+            JWT_ISSUER=${JWT_ISSUER}
+      
+            CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+            CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+            CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+            CLOUDINARY_FOLDER=${CLOUDINARY_FOLDER}
+      
+            MAIL_USERNAME=${MAIL_USERNAME}
+            MAIL_PASSWORD=${MAIL_PASSWORD}
+            MAIL_FROM=${MAIL_FROM}
+            MAIL_SMTP_CONNECTION_TIMEOUT=${MAIL_SMTP_CONNECTION_TIMEOUT}
+            MAIL_SMTP_TIMEOUT=${MAIL_SMTP_TIMEOUT}
+            MAIL_SMTP_WRITETIMEOUT=${MAIL_SMTP_WRITETIMEOUT}
+            MAIL_SMTP_AUTH=${MAIL_SMTP_AUTH}
+            MAIL_SMTP_STARTTLS=${MAIL_SMTP_STARTTLS}
+      
+            CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
+            APP_BASE_URL=${APP_BASE_URL}
+      
+            PAY_OS_CLIENT_ID=${PAY_OS_CLIENT_ID}
+            PAY_OS_API_KEY=${PAY_OS_API_KEY}
+            PAY_OS_CHECKSUM_KEY=${PAY_OS_CHECKSUM_KEY}
+            
+            DOCKER_USERNAME=${DOCKER_USERNAME}
+            DOCKER_APP=${DOCKER_APP}
+            DOCKER_APP_VERSION=${DOCKER_APP_VERSION}
+            EOF
+            
+            rn docker-compose.dev.yml
+            
+            # Download docker-compose.dev.yml if it doesn't exist
+            if [! -f docker-compose.dev.yml]; then
+              curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -o docker-compose.dev.yml https://raw.githubusercontent.com/${{ github.reposiroty }}/refs/heads/main/docker-compose.dev.yml
+            fi
+            
+            # Pull latest images
+            docker compose -f docker-compose.dev.yml --env-file .env pull
+            
+            # Stop and rm container
+            docker compose -f docker-compose.dev.yml --env-file .env down
+            
+            # Start new container
+            docker compose -f docker-compose.dev.yml --env-file .env up -d
+            
 
 
 
