fix(cd): correct deploy workflow script by removing `rn` command, fixing `if` condition syntax, and repository typo

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -152,11 +152,9 @@ jobs:
             DOCKER_APP_VERSION=${DOCKER_APP_VERSION}
             EOF
             
-            rn docker-compose.dev.yml
-            
             # Download docker-compose.dev.yml if it doesn't exist
-            if [! -f docker-compose.dev.yml]; then
-              curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -o docker-compose.dev.yml https://raw.githubusercontent.com/${{ github.reposiroty }}/refs/heads/main/docker-compose.dev.yml
+            if [ ! -f docker-compose.dev.yml ]; then
+              curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -o docker-compose.dev.yml https://raw.githubusercontent.com/${{ github.repository }}/refs/heads/main/docker-compose.dev.yml
             fi
             
             # Pull latest images
