--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,4 +1,4 @@
-# RUN:    docker compose -f docker-compose-dev.yml up -d
+# RUN:    docker compose -f docker-compose.dev.yml up -d
 # BUILD:  docker build -t nguyenminh1301/per:<tagname> .
 # PUSH:   docker push nguyenminh1301/per:<tagname>
 
@@ -66,9 +66,9 @@ services:
     container_name: postgres
     restart: unless-stopped
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USERNAME}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USERNAME}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports: ["5432:5432"]
     volumes: ["db:/var/lib/postgresql/data"]
 
