--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: per
   profiles:
-    active: dev   # profile
+    active: dev # profile
   config:
     import: optional:file:.env[.properties] # link .env
   threads:
@@ -12,7 +12,7 @@ spring:
       enabled: true
   datasource:
     url: ${POSTGRES_URL}
-    username: ${POSTGRES_USERNAME}
+    username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
   flyway:
     enabled: true
