--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,12 @@
 			<version>1.0.3</version>
 		</dependency>
 
+		<!-- Kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
