--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -60,6 +60,8 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     ports:
       - "8080:8080"
+    networks:
+      - per-network
     depends_on:
       - db
       - redis
@@ -73,6 +75,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports: ["5432:5432"]
+    networks:
+      - per-network
     volumes: ["db:/var/lib/postgresql/data"]
 
   redis:
@@ -81,6 +85,8 @@ services:
     restart: unless-stopped
     ports:
       - "6379:6379"
+    networks:
+      - per-network
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.6.1
@@ -90,6 +96,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - "22181:2181"
+    networks:
+      - per-network
 
   kafka:
     image: confluentinc/cp-kafka:7.6.1
@@ -98,6 +106,8 @@ services:
       - zookeeper
     ports:
       - "29092:29092"
+    networks:
+      - per-network
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -111,11 +121,38 @@ services:
     image: provectuslabs/kafka-ui:latest
     ports:
       - 8090:8080
+    networks:
+      - per-network
     environment:
-      DYNAMIC_CONFIG_ENABLED: 'true'
+      DYNAMIC_CONFIG_ENABLED: "true"
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: pre-event-prometheus
+    user: root
+    restart: unless-stopped
+    volumes:
+      - ./monitor/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./data/prometheus_data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/etc/prometheus/console_libraries"
+      - "--web.console.templates=/etc/prometheus/consoles"
+      - "--web.enable-lifecycle"
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    ports:
+      - "9090:9090"
+    networks:
+      - per-network
+
 volumes:
   db:
+
+networks:
+  per-network:
+    driver: bridge
