--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,6 +46,8 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     ports:
       - "8080:8080"
+    networks:
+      - per-network
     depends_on:
       - db
       - redis
@@ -59,6 +61,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports: ["5432:5432"]
+    networks:
+      - per-network
     volumes: ["db:/var/lib/postgresql/data"]
 
   redis:
@@ -67,6 +71,8 @@ services:
     restart: unless-stopped
     ports:
       - "6379:6379"
+    networks:
+      - per-network
 
   zookeeper:
     image: confluentinc/cp-zookeeper:7.6.1
@@ -76,6 +82,8 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - "22181:2181"
+    networks:
+      - per-network
 
   kafka:
     image: confluentinc/cp-kafka:7.6.1
@@ -84,6 +92,8 @@ services:
       - zookeeper
     ports:
       - "29092:29092"
+    networks:
+      - per-network
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -97,6 +107,8 @@ services:
     image: provectuslabs/kafka-ui:latest
     ports:
       - "127.0.0.1:8090:8080"
+    networks:
+      - per-network
     environment:
       DYNAMIC_CONFIG_ENABLED: "true"
       KAFKA_CLUSTERS_0_NAME: local
@@ -106,5 +118,28 @@ services:
       SPRING_SECURITY_USER_NAME: ${KAFKA_UI_USERNAME}
       SPRING_SECURITY_USER_PASSWORD: ${KAFKA_UI_PASSWORD}
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    user: root
+    restart: unless-stopped
+    volumes:
+      - ./monitor/prometheus.prod.yml:/etc/prometheus/prometheus.yml
+      - ./data/prometheus_data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/etc/prometheus/console_libraries"
+      - "--web.console.templates=/etc/prometheus/consoles"
+      - "--web.enable-lifecycle"
+    ports:
+      - "9090:9090"
+    networks:
+      - per-network
+
 volumes:
   db:
+
+networks:
+  per-network:
+    driver: bridge
