--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,5 +38,16 @@ spring:
       mail.smtp.writetimeout: ${MAIL_SMTP_WRITETIMEOUT:5000}
     default-encoding: UTF-8
 
+management:
+  endpoint:
+    health:
+      show-details: always
+    prometheus:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health, prometheus
+
 server:
   port: ${SERVER_PORT:8080}
