--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,13 @@
             <version>2.0.2</version>
         </dependency>
 
+        <!-- Logstash -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>9.0</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
