--- a/elk/pipeline/logstash.conf
+++ b/elk/pipeline/logstash.conf
@@ -12,6 +12,8 @@ filter {
 output {
   elasticsearch {
     hosts => "http://elasticsearch:9200"
+    user => "${ELASTICSEARCH_USERNAME}"
+    password => "${ELASTIC_PASSWORD}"
     index => "per-%{+YYYY.MM.dd}"
     ecs_compatibility => disabled
   }
