--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -42,6 +42,7 @@ services:
       - PAY_OS_CLIENT_ID=${PAY_OS_CLIENT_ID}
       - PAY_OS_API_KEY=${PAY_OS_API_KEY}
       - PAY_OS_CHECKSUM_KEY=${PAY_OS_CHECKSUM_KEY}
+      - LOGSTASH_HOST=logstash
 
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
     ports:
@@ -201,8 +202,8 @@ services:
     volumes:
       - ./elk/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
     ports:
-      - "9200:9200"
-      - "9300:9300"
+      - "127.0.0.1:200:9200"
+      - "127.0.0.1:9300:9300"
     environment:
       - ES_JAVA_OPTS=-Xmx256m -Xms256m
       - discovery.type=single-node
@@ -216,10 +217,10 @@ services:
       - ./elk/logstash.yml:/usr/share/logstash/config/logstash.yml
       - ./elk/pipeline:/usr/share/logstash/pipeline
     ports:
-      - "5044:5044"
-      - "5033:5000/tcp"
-      - "5022:5000/udp"
-      - "9600:9600"
+      - "127.0.0.1:5044:5044"
+      - "127.0.0.1:5033:5000/tcp"
+      - "127.0.0.1:5022:5000/udp"
+      - "127.0.0.1:9600:9600"
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
     networks:
@@ -233,7 +234,7 @@ services:
     volumes:
       - ./elk/kibana.yml:/usr/share/kibana/config/kibana.yml
     ports:
-      - "5601:5601"
+      - "127.0.0.1:5601:5601"
     networks:
       - per-network
     depends_on:
