--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,7 @@
+spring:
+  config:
+    import: classpath:com/per/common/config/resilience4j/resilience4j-dev.yml
+
 jpa:
   hibernate:
     ddl-auto: validate
@@ -47,53 +51,3 @@ springdoc:
   api-docs:
     path: /per/v3/api-docs
   server-url: ${APP_BASE_URL:http://localhost:8080}
-
-resilience4j:
-  circuitbreaker:
-    instances:
-      media:
-        slidingWindowSize: 10
-        minimumNumberOfCalls: 5
-        waitDurationInOpenState: 10s
-        failureRateThreshold: 50
-        permittedNumberOfCallsInHalfOpenState: 3
-        eventConsumerBufferSize: 10
-        registerHealthIndicator: true
-
-  ratelimiter:
-    instances:
-      # Auth
-      authStrict:
-        limitForPeriod: 20
-        limitRefreshPeriod: 60s
-        timeoutDuration: 0
-        registerHealthIndicator: true
-      authVeryStrict:
-        limitForPeriod: 20
-        limitRefreshPeriod: 1h
-        timeoutDuration: 0
-        registerHealthIndicator: true
-      authModerate:
-        limitForPeriod: 30
-        limitRefreshPeriod: 60s
-        timeoutDuration: 5s
-        registerHealthIndicator: true
-
-      #Media
-      mediaSingle:
-        limitForPeriod: 3
-        limitRefreshPeriod: 5s
-        timeoutDuration: 2s
-        registerHealthIndicator: true
-      mediaMultipart:
-        limitForPeriod: 10
-        limitRefreshPeriod: 20s
-        timeoutDuration: 5s
-        registerHealthIndicator: true
-
-      # Swagger
-      swagger:
-        limitForPeriod: 100 # include file .js, .css, .ico,...
-        limitRefreshPeriod: 60s
-        timeoutDuration: 5s
-        registerHealthIndicator: true
