feat: implement Resilience4j rate limiting for public product, brand, category, and made-in endpoints and update security configuration

--- a/src/main/resources/resilience4j/resilience4j-prod.yml
+++ b/src/main/resources/resilience4j/resilience4j-prod.yml
@@ -47,3 +47,15 @@ resilience4j:
         limitRefreshPeriod: 30s
         timeoutDuration: 0
         registerHealthIndicator: true
+
+      # Public
+      mediumTraffic:
+        limitForPeriod: 10
+        limitRefreshPeriod: 30s
+        timeoutDuration: 5s
+        registerHealthIndicator: true
+      highTraffic:
+        limitForPeriod: 20
+        limitRefreshPeriod: 30s
+        timeoutDuration: 5s
+        registerHealthIndicator: true
