--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,12 @@
             <version>9.0</version>
         </dependency>
 
+        <!-- Elasticsearch -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
 	</dependencies>
 
 	<build>
