--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
       password: ${REDIS_PASSWORD}
+  elasticsearch:
+    uris: ${ELASTICSEARCH_URI:http://localhost:9200}
   mail:
     host: smtp.gmail.com
     port: 587
