feat(init): auto-create admin user on startup if not exists

--- a/.env.example
+++ b/.env.example
@@ -50,4 +50,10 @@ KAFKA_UI_USERNAME=
 KAFKA_UI_PASSWORD=
 
 # Elasticsearch
-ELASTICSEARCH_URI=
+ELASTICSEARCH_URI=http://localhost:9200
+
+# Admin Auto-Creation
+ADMIN_EMAIL=admin@per.com
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=Admin@123
+ADMIN_ENABLED=true
