refactor: externalize admin initialization configuration and remove method-level admin authorization from controllers

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,9 @@ MAIL_SMTP_STARTTLS=true
 SERVER_PORT=8080
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 APP_BASE_URL=http://localhost:8080
+APP_ADMIN_USERNAME=
+APP_ADMIN_EMAIL=
+APP_ADMIN_PASSWORD=
 
 # PayOS
 PAY_OS_CLIENT_ID=
@@ -50,10 +53,4 @@ KAFKA_UI_USERNAME=
 KAFKA_UI_PASSWORD=
 
 # Elasticsearch
-ELASTICSEARCH_URI=http://localhost:9200
-
-# Admin Auto-Creation
-ADMIN_EMAIL=admin@per.com
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=Admin@123
-ADMIN_ENABLED=true
+ELASTICSEARCH_URI=
