--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,6 +22,8 @@ app:
   base-url: ${APP_BASE_URL:http://localhost:8080}
   cors:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
+  elasticsearch:
+    auto-reindex: ${APP_ELASTICSEARCH_AUTO_REINDEX:true}
   mail:
     from: ${MAIL_FROM}
 
