--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,6 +20,8 @@ app:
   base-url: ${APP_BASE_URL}
   cors:
     allowed-origins: ${CORS_ALLOWED_ORIGINS}
+  elasticsearch:
+    auto-reindex: ${APP_ELASTICSEARCH_AUTO_REINDEX:false}
   mail:
     from: ${MAIL_FROM}
 
