config(docker): update environment variables for admin and elasticsearch

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -64,6 +64,7 @@ services:
 
       # --- Elasticsearch ---
       - ELASTICSEARCH_URI=http://elasticsearch:9200
+      - APP_ELASTICSEARCH_AUTO_REINDEX=${APP_ELASTICSEARCH_AUTO_REINDEX}
 
       # --- Admin Account ---
       - APP_ADMIN_USERNAME=${APP_ADMIN_USERNAME}
