--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,8 +46,8 @@ services:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - LOGSTASH_HOST=logstash
       - ELASTICSEARCH_URI=${ELASTICSEARCH_URI}
+      - APP_ELASTICSEARCH_AUTO_REINDEX=${APP_ELASTICSEARCH_AUTO_REINDEX}
 
-      # --- Admin Account ---
       - APP_ADMIN_USERNAME=${APP_ADMIN_USERNAME}
       - APP_ADMIN_EMAIL=${APP_ADMIN_EMAIL}
       - APP_ADMIN_PASSWORD=${APP_ADMIN_PASSWORD}
