--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -66,6 +66,11 @@ services:
       - ELASTICSEARCH_URI=http://elasticsearch:9200
       - APP_ELASTICSEARCH_AUTO_REINDEX=${APP_ELASTICSEARCH_AUTO_REINDEX}
 
+      # --- Ollama (RAG) ---
+      - OLLAMA_BASE_URL=http://ollama:11434
+      - OLLAMA_CHAT_MODEL=${OLLAMA_CHAT_MODEL:-llama3.2}
+      - OLLAMA_EMBEDDING_MODEL=${OLLAMA_EMBEDDING_MODEL:-nomic-embed-text}
+
       # --- Admin Account ---
       - APP_ADMIN_USERNAME=${APP_ADMIN_USERNAME}
       - APP_ADMIN_EMAIL=${APP_ADMIN_EMAIL}
@@ -79,17 +84,35 @@ services:
       - redis
 
   db:
-    image: postgres:16-alpine
+    image: pgvector/pgvector:pg16
     container_name: postgres
     restart: unless-stopped
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports: ["5432:5432"]
+    ports: [ "5432:5432" ]
     networks:
       - per-network
-    volumes: ["db:/var/lib/postgresql/data"]
+    volumes: [ "db:/var/lib/postgresql/data" ]
+
+  ollama:
+    image: ollama/ollama:latest
+    container_name: ollama
+    restart: unless-stopped
+    ports:
+      - "11434:11434"
+    networks:
+      - per-network
+    volumes:
+      - ollama_data:/root/.ollama
+    environment:
+      - OLLAMA_ORIGINS=*
+    healthcheck:
+      test: [ "CMD", "ollama", "list" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   redis:
     image: redis:7-alpine
@@ -263,6 +286,8 @@ services:
 volumes:
   db:
   kafka_data:
+  ollama_data:
+
 
 networks:
   per-network:
