--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,14 +24,11 @@ app:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
   elasticsearch:
     auto-reindex: ${APP_ELASTICSEARCH_AUTO_REINDEX:true}
-  ollama:
-    auto-pull: ${APP_OLLAMA_AUTO_PULL:true}
-    max-wait-seconds: ${APP_OLLAMA_MAX_WAIT_SECONDS:30}
   mail:
     from: ${MAIL_FROM}
   rag:
     auto-index: ${APP_RAG_AUTO_INDEX:true}
-    chat-model: ${OLLAMA_CHAT_MODEL:llama3.2}
+    chat-model: ${OPENAI_CHAT_MODEL:gpt-3.5-turbo}
     search-top-k: ${RAG_SEARCH_TOP_K:3}
     similarity-threshold: ${RAG_SIMILARITY_THRESHOLD:0.3}
 
