--- a/.env.example
+++ b/.env.example
@@ -51,10 +51,10 @@ DOCKER_APP_VERSION=
 KAFKA_BOOTSTRAP_SERVERS=localhost:29092
 
 # RAG
-OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_EMBEDDING_MODEL=nomic-embed-text
-OLLAMA_CHAT_MODEL=gemma2:2b
-RAG_SEARCH_TOP_K=3
+OPENAI_API_KEY=
+OPENAI_CHAT_MODEL=gpt-4o  # or gpt-3.5-turbo
+OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+RAG_SEARCH_TOP_K=5
 RAG_SIMILARITY_THRESHOLD=0.3
 
 # Kafka UI
