--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -48,9 +48,19 @@ services:
       - ELASTICSEARCH_URI=${ELASTICSEARCH_URI}
       - APP_ELASTICSEARCH_AUTO_REINDEX=${APP_ELASTICSEARCH_AUTO_REINDEX}
 
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_CHAT_MODEL=${OPENAI_CHAT_MODEL:-gpt-3.5-turbo}
+      - OPENAI_EMBEDDING_MODEL=${OPENAI_EMBEDDING_MODEL:-text-embedding-3-small}
+      - RAG_SEARCH_TOP_K=${RAG_SEARCH_TOP_K:5}
+      - RAG_SIMILARITY_THRESHOLD=${RAG_SIMILARITY_THRESHOLD:0.3}
+
       - APP_ADMIN_USERNAME=${APP_ADMIN_USERNAME}
       - APP_ADMIN_EMAIL=${APP_ADMIN_EMAIL}
       - APP_ADMIN_PASSWORD=${APP_ADMIN_PASSWORD}
+
+    volumes:
+      - ./knowledge:/app/knowledge:ro
+
     ports:
       - "8080:8080"
     networks:
