chore(infra): update environment config and documentation for AWS SES

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,14 +27,10 @@ services:
       - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
       - CLOUDINARY_FOLDER=${CLOUDINARY_FOLDER}
 
-      - MAIL_USERNAME=${MAIL_USERNAME}
-      - MAIL_PASSWORD=${MAIL_PASSWORD}
-      - MAIL_FROM=${MAIL_FROM}
-      - MAIL_SMTP_CONNECTION_TIMEOUT=${MAIL_SMTP_CONNECTION_TIMEOUT}
-      - MAIL_SMTP_TIMEOUT=${MAIL_SMTP_TIMEOUT}
-      - MAIL_SMTP_WRITETIMEOUT=${MAIL_SMTP_WRITETIMEOUT}
-      - MAIL_SMTP_AUTH=${MAIL_SMTP_AUTH}
-      - MAIL_SMTP_STARTTLS=${MAIL_SMTP_STARTTLS}
+      - AWS_REGION=${AWS_REGION:-ap-southeast-1}
+      - AWS_SES_SOURCE_EMAIL=${AWS_SES_SOURCE_EMAIL:-no-reply@per.io.vn}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
       - APP_BASE_URL=${APP_BASE_URL}
