--- a/.env.example
+++ b/.env.example
@@ -18,15 +18,6 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 
-# Mail
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_FROM=
-MAIL_SMTP_AUTH=true
-MAIL_SMTP_STARTTLS=true
-
 # Server & App
 SERVER_PORT=8080
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
@@ -64,3 +55,10 @@ KAFKA_UI_PASSWORD=
 # Elasticsearch
 ELASTICSEARCH_URI=
 APP_ELASTICSEARCH_AUTO_REINDEX=true
+
+# AWS
+# SES
+AWS_REGION=
+AWS_SES_SOURCE_EMAIL=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
