--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -37,15 +37,11 @@ services:
       - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
       - CLOUDINARY_FOLDER=${CLOUDINARY_FOLDER}
 
-      # --- Mail ---
-      - MAIL_USERNAME=${MAIL_USERNAME}
-      - MAIL_PASSWORD=${MAIL_PASSWORD}
-      - MAIL_FROM=${MAIL_FROM}
-      - MAIL_SMTP_CONNECTION_TIMEOUT=${MAIL_SMTP_CONNECTION_TIMEOUT}
-      - MAIL_SMTP_TIMEOUT=${MAIL_SMTP_TIMEOUT}
-      - MAIL_SMTP_WRITETIMEOUT=${MAIL_SMTP_WRITETIMEOUT}
-      - MAIL_SMTP_AUTH=${MAIL_SMTP_AUTH}
-      - MAIL_SMTP_STARTTLS=${MAIL_SMTP_STARTTLS}
+      # --- AWS SES ---
+      - AWS_REGION=${AWS_REGION:-ap-southeast-1}
+      - AWS_SES_SOURCE_EMAIL=${AWS_SES_SOURCE_EMAIL:-no-reply@per.io.vn}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 
       # --- CORS & App URLs ---
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
